# ETL_From_json_to_csv_parquet

./: README.md  etl.py  pipeline.py  pyproject.toml
